--- a/styles/header.css
+++ b/styles/header.css
@@ -62,6 +62,7 @@
     list-style-type: none;
     display: inline-block;
     border-bottom: 1px solid rgba(252, 85, 124, 0);
+    transition: 0.3s ease;
 }
 
 .nav-menu-list__item:hover {
