--- a/styles/header.css
+++ b/styles/header.css
@@ -79,6 +79,11 @@
     margin-right: 27px;
     font-size: 25px;
     font-weight: bold;
+    transition: 0.3s ease;
+}
+
+.header-phon:hover {
+    color: #fc557c;
 }
 
 .header-about-me {
