работа над хидером, модальным окном

--- a/styles/adaptiv/adaptiv.css
+++ b/styles/adaptiv/adaptiv.css
@@ -39,11 +39,11 @@
 	}
 	
 	.nav-menu__nav-button{
-		display: block;
+		/*display: block;*/
 	}
 	
 	.nav-menu-list{
-		display: none;
+		/*display: none;*/
 	}
 
 	.header-about-me{
@@ -347,9 +347,14 @@
 	.nav-menu{
 		flex-basis: auto;
 	}
-	
+
 	.nav-menu__nav-button{
 		padding: 12px;
+		display: block;
+	}
+
+	.nav-menu-list {
+		display: none;
 	}
 	
 	.header-phon{
@@ -590,6 +595,10 @@
 		padding-top: 41px;
 	}
 
+	.footer-nav {
+		margin-right: 12%;
+	}
+
 	.footer__copyright {
 		font-size: 12px;
 		margin-top: 41px;
@@ -601,11 +610,12 @@
     	margin-bottom: 15px;
 	}
 
-    .footer-contacts{
+	.footer-contacts {
 		margin: 0;
-    	margin-top: 26px;
-    	font-size: 20px;
-    	color: #8993ad;
+		margin-right: 5%;
+		margin-top: 26px;
+		font-size: 20px;
+		color: #8993ad;
 		flex-basis: auto;
 	}
 
@@ -637,9 +647,11 @@
     	background-color: #ff4e2e;
     	color: #fff;
 	}
-	
-    .social-group{
-	    margin-top: 50px;
-    	margin-bottom: 0;
+
+	.social-group {
+		margin-top: 50px;
+		margin-bottom: 0;
+		display: flex; /* Это не по макету*/
+		justify-content: space-evenly; /* Это не по макету*/
 	}
 }
